@@ -1,3 +1,8 @@
+2011-12-01
+* don't follow symlinks for chmod
+* unsquashfs from openwrt with lzma cannot unpack to an existing directory, so
+use an extra directory to work around that limitation
+
 2011-11-25
 * add jdeserialize to bat-extratools
 * add unpacking for Java serialized files using jdeserialize
